Update lobbyInside function
